test/fail/mixins/System.mo
mixin <system>() {
  func f<system>() {};
  f<system>();
}
